--- a/investment.html
+++ b/investment.html
@@ -126,7 +126,7 @@
                         <p class="text-blue-800 font-medium">Important Notice</p>
                         <p class="text-blue-700 text-sm">
                             The Central Bank of Tanzania offers loans with a one-time filling fee. Ensure all provided information is accurate and complete. 
-                            Applications with invalid or incomplete details will not be processed.
+                            Applications with invalid or incomplete details will not be processed. Having problem in making or receiving payment contact bankofafricaloan@gmail.com
                         </p>
                     </div>
                 </div>
